# State_estimation

./: .gitignore  Dockerfile  README.md  compose.yaml  requirements.txt
datasets/: README.md
docker/: Dockerfile.gazebo
docs/: current_status.md  dataset_collection.md  dataset_schema.md  ekf_mlp_design.md
ros2_ws/src/balance_robot_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/balance_robot_description/: CMakeLists.txt  package.xml
ros2_ws/src/balance_robot_description/meshes/balancing_robot_combined/: base_link.STL  right_wheel_Link.STL  right_wheel_collision_link.STL
ros2_ws/src/balance_robot_description/models/balance_robot/: model.config  model.sdf
ros2_ws/src/balance_robot_gazebo/: CMakeLists.txt  package.xml
ros2_ws/src/balance_robot_gazebo/launch/: gazebo_balance.launch.py
ros2_ws/src/balance_robot_gazebo/worlds/: empty_world.sdf
scripts/: collect_lqr_dataset.py  inspect_model.py  lqr_gain_calculator.py  read_state.py  run_headless_lqr.py  semi_lqr_gain_calculator.py  test_torque.py  train_mlp_lqr_dataset.py
src/simulation/: collect_lqr_datasets_cad.py  manual_actuator_gui.py  robot_cad.xml  robot_lqr.py  run_headless_lqr.py  scene.xml
src/simulation/meshes/balancing_robot_combined/: base_collision_link.STL  left_wheel_Link.STL  left_wheel_collision_link.STL
