<?xml version="1.0"?>
<package format="3">
  <name>balance_robot_bringup</name>
  <version>0.1.0</version>
  <description>Bringup package for launching controllers, bridges, and estimators.</description>

  <maintainer email="eeedsasdf@postech.ac.kr">Boo Seung Hwan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>balance_robot_description</exec_depend>
  <exec_depend>balance_robot_gazebo</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
