<?xml version="1.0"?>
<package format="3">
  <name>balance_robot_description</name>
  <version>0.1.0</version>
  <description>Description package for the self-balancing robot.</description>

  <maintainer email="eeedsasdf@postech.ac.kr">Boo Seung Hwan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
